Fixed all up-to-date bugs on mobile

--- a/src/Styles/Components/MobileAnimation.sass
+++ b/src/Styles/Components/MobileAnimation.sass
@@ -10,7 +10,6 @@
 	// z-index: 2
 
 .hold-icon
-
 	display: flex
 	position: absolute
 	bottom: 230px
@@ -24,6 +23,7 @@
 	background: #FFFFFF
 	border: 1px solid #FAFAFA
 	box-shadow: 0px 0px 1px #B0C3D21A
+	transition: bottom .15s cubic-bezier(.5,0,0,1)
 	.center
 		left: 0
 		right: 0
@@ -50,6 +50,8 @@
 		.center
 			.swiper
 				background: #ffffff
+	&.down
+		bottom: 161px
 .logo
 	position: absolute
 	top: 25px
